feat: reducing the size of the android app by not including the larger mod files and lazy loading them when first used.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                 "three-mesh-bvh": "./js/lib/three-mesh-bvh.js",
                 "three-bvh-csg": "./js/lib/three-bvh-csg.js",
                 "@capacitor/network": "./js/lib/capacitor-network/index.js",
-                "@capacitor/core": "./js/lib/capacitor-core/index.js"
+                "@capacitor/core": "./js/lib/capacitor-core/index.js",
+                "@capacitor/filesystem": "./js/lib/capacitor-filesystem/index.js",
+                "@capacitor/synapse": "./js/lib/capacitor-synapse/index.js"
             }
         }
     </script>
