--- a/index.html
+++ b/index.html
@@ -288,7 +288,8 @@
 
             <div class="text-left bg-black/30 p-3 rounded mb-4 text-xs font-mono text-gray-400">
                 <p class="font-bold text-gray-500 mb-1 uppercase">Scramble:</p>
-                <p id="scramble-text" class="break-words tracking-wider leading-relaxed text-yellow-500/80"></p>
+                <p id="scramble-text"
+                    class="break-words tracking-wider leading-relaxed text-yellow-500/80 whitespace-pre-wrap"></p>
             </div>
 
             <div class="text-left bg-black/30 p-3 rounded mb-4 text-xs font-mono text-gray-400" id="final-solution">
@@ -323,7 +324,8 @@
 
             <div class="mb-4">
                 <p class="text-xs text-gray-500 uppercase font-bold">Scramble</p>
-                <p class="text-sm text-yellow-500 font-mono break-words bg-black/40 p-2 rounded" id="detail-scramble">
+                <p class="text-sm text-yellow-500 font-mono break-words bg-black/40 p-2 rounded whitespace-pre-wrap"
+                    id="detail-scramble">
                 </p>
             </div>
 
