--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                     <button data-category="standard"
                         class="leaderboard-category-btn group flex-1 md:w-full text-left px-3 py-2 md:px-4 md:py-3 rounded-xl text-gray-400 hover:bg-gray-800 hover:text-white transition flex items-center gap-2 md:gap-3 border border-transparent hover:border-gray-700 shrink-0">
                         <div class="flex flex-col">
-                            <span class="font-bold text-sm">Standard</span>
-                            <span class="text-[10px] opacity-60 hidden md:block">2x2 - 7x7</span>
+                            <span class="font-bold text-sm">WCA Puzzles</span>
+                            <span class="text-[10px] opacity-60 hidden md:block">Official Events</span>
                         </div>
                     </button>
                     <button data-category="big"
@@ -421,7 +421,7 @@
             </div>
 
             <!-- Main Content -->
-            <div class="flex-1 flex flex-col min-w-0 bg-gray-900/50">
+            <div class="flex-1 flex flex-col min-w-0 min-h-0 bg-gray-900/50">
                 <!-- Header -->
                 <div class="p-4 border-b border-gray-700 bg-gray-900/80 backdrop-blur z-10">
                     <div class="flex items-center justify-between mb-4">
@@ -451,11 +451,11 @@
 
                 <!-- Carousel / Content Area -->
                 <div id="leaderboard-carousel"
-                    class="flex-1 overflow-x-hidden relative flex snap-x snap-mandatory scroll-smooth">
+                    class="flex-1 min-h-0 overflow-x-hidden relative flex snap-x snap-mandatory scroll-smooth">
 
                     <!-- Standard Table -->
                     <div id="lb-cat-standard"
-                        class="w-full flex-shrink-0 snap-center overflow-y-auto p-0 scrollbar-thin scrollbar-thumb-gray-700">
+                        class="w-full h-full flex-shrink-0 snap-center overflow-y-auto p-0 scrollbar-thin scrollbar-thumb-gray-700">
                         <table class="w-full text-left border-collapse">
                             <thead class="bg-gray-800/50 text-xs uppercase text-gray-500 sticky top-0 backdrop-blur-md">
                                 <tr>
@@ -470,7 +470,7 @@
 
                     <!-- Big Table -->
                     <div id="lb-cat-big"
-                        class="w-full flex-shrink-0 snap-center overflow-y-auto p-0 scrollbar-thin scrollbar-thumb-gray-700">
+                        class="w-full h-full flex-shrink-0 snap-center overflow-y-auto p-0 scrollbar-thin scrollbar-thumb-gray-700">
                         <table class="w-full text-left border-collapse">
                             <thead class="bg-gray-800/50 text-xs uppercase text-gray-500 sticky top-0 backdrop-blur-md">
                                 <tr>
@@ -485,7 +485,7 @@
 
                     <!-- Cuboids Table -->
                     <div id="lb-cat-cuboids"
-                        class="w-full flex-shrink-0 snap-center overflow-y-auto p-0 scrollbar-thin scrollbar-thumb-gray-700">
+                        class="w-full h-full flex-shrink-0 snap-center overflow-y-auto p-0 scrollbar-thin scrollbar-thumb-gray-700">
                         <table class="w-full text-left border-collapse">
                             <thead class="bg-gray-800/50 text-xs uppercase text-gray-500 sticky top-0 backdrop-blur-md">
                                 <tr>
@@ -500,7 +500,7 @@
 
                     <!-- Mirror Table -->
                     <div id="lb-cat-mirror"
-                        class="w-full flex-shrink-0 snap-center overflow-y-auto p-0 scrollbar-thin scrollbar-thumb-gray-700">
+                        class="w-full h-full flex-shrink-0 snap-center overflow-y-auto p-0 scrollbar-thin scrollbar-thumb-gray-700">
                         <table class="w-full text-left border-collapse">
                             <thead class="bg-gray-800/50 text-xs uppercase text-gray-500 sticky top-0 backdrop-blur-md">
                                 <tr>
@@ -515,7 +515,7 @@
 
                     <!-- Mods Table -->
                     <div id="lb-cat-mods"
-                        class="w-full flex-shrink-0 snap-center overflow-y-auto p-0 scrollbar-thin scrollbar-thumb-gray-700">
+                        class="w-full h-full flex-shrink-0 snap-center overflow-y-auto p-0 scrollbar-thin scrollbar-thumb-gray-700">
                         <table class="w-full text-left border-collapse">
                             <thead class="bg-gray-800/50 text-xs uppercase text-gray-500 sticky top-0 backdrop-blur-md">
                                 <tr>
@@ -530,7 +530,7 @@
 
                     <!-- Custom Table -->
                     <div id="lb-cat-custom"
-                        class="w-full flex-shrink-0 snap-center overflow-y-auto p-0 scrollbar-thin scrollbar-thumb-gray-700">
+                        class="w-full h-full flex-shrink-0 snap-center overflow-y-auto p-0 scrollbar-thin scrollbar-thumb-gray-700">
                         <table class="w-full text-left border-collapse">
                             <thead class="bg-gray-800/50 text-xs uppercase text-gray-500 sticky top-0 backdrop-blur-md">
                                 <tr>
