--- a/index.html
+++ b/index.html
@@ -211,6 +211,17 @@
                         <span class="font-medium">Leaderboards</span>
                     </button>
 
+                    <button id="btn-drawer-feedback"
+                        class="w-full text-left p-3 rounded-xl hover:bg-white/5 transition flex items-center gap-3 text-gray-300 hover:text-white group">
+                        <svg class="w-5 h-5 text-gray-500 group-hover:text-green-400 transition" fill="none"
+                            stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z">
+                            </path>
+                        </svg>
+                        <span class="font-medium">Feedback</span>
+                    </button>
+
                     <!-- Placeholders -->
                     <button
                         class="w-full text-left p-3 rounded-xl hover:bg-white/5 transition flex items-center gap-3 text-gray-500 cursor-not-allowed opacity-50">
@@ -309,6 +320,89 @@
         </div>
     </div>
 
+
+
+    <!-- Feedback Modal -->
+    <div id="feedback-modal"
+        class="hidden fixed inset-0 z-[80] flex items-center justify-center bg-black/90 backdrop-blur-sm p-4 opacity-0 transition-opacity duration-300">
+        <div
+            class="bg-gray-900 border border-gray-700 p-6 rounded-2xl max-w-md w-full relative shadow-2xl flex flex-col gap-4">
+
+            <div class="flex items-center justify-between">
+                <h2 class="text-xl font-bold text-white flex items-center gap-2">
+                    <span class="text-green-400">💬</span> Feedback
+                </h2>
+                <button onclick="overlayManager.close()"
+                    class="text-gray-400 hover:text-white transition rounded-full p-1 hover:bg-white/5">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12">
+                        </path>
+                    </svg>
+                </button>
+            </div>
+
+            <p class="text-sm text-gray-400">Found a bug? Have an idea? Let us know!</p>
+
+            <!-- Category -->
+            <div>
+                <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Category</label>
+                <select id="feedback-category"
+                    class="w-full bg-gray-800 text-white rounded-lg border border-gray-600 px-3 py-2 focus:outline-none focus:border-green-500 transition">
+                    <option value="General">General</option>
+                    <option value="Feature Request">Feature Request</option>
+                    <option value="Bug Report">Bug Report</option>
+                    <option value="Support">Support</option>
+                </select>
+            </div>
+
+            <!-- Email (Optional) -->
+            <div>
+                <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Your Email (Optional)</label>
+                <input type="email" id="feedback-email" placeholder="name@example.com"
+                    class="w-full bg-gray-800 text-white rounded-lg border border-gray-600 px-3 py-2 focus:outline-none focus:border-green-500 transition">
+                <p class="text-[10px] text-gray-600 mt-1">We'll only use this to reply to your message.</p>
+            </div>
+
+            <!-- Message -->
+            <div>
+                <label class="block text-xs font-bold text-gray-500 uppercase mb-1">Message</label>
+                <textarea id="feedback-message" rows="4" placeholder="Type your message here..."
+                    class="w-full bg-gray-800 text-white rounded-lg border border-gray-600 px-3 py-2 focus:outline-none focus:border-green-500 transition resize-none"></textarea>
+            </div>
+
+            <!-- Footer Buttons -->
+            <div id="feedback-footer" class="flex gap-3 mt-2">
+                <button onclick="overlayManager.close()"
+                    class="flex-1 bg-gray-800 hover:bg-gray-700 text-gray-300 font-bold py-2 rounded-lg transition">
+                    Cancel
+                </button>
+                <button id="btn-submit-feedback"
+                    class="flex-1 bg-green-600 hover:bg-green-500 text-white font-bold py-2 rounded-lg transition shadow-lg flex items-center justify-center gap-2">
+                    <span>Send</span>
+                    <svg id="feedback-spinner" class="animate-spin h-4 w-4 text-white hidden"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4">
+                        </circle>
+                        <path class="opacity-75" fill="currentColor"
+                            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                        </path>
+                    </svg>
+                </button>
+            </div>
+
+            <!-- Success Message (Initially Hidden) -->
+            <div id="feedback-success" class="hidden flex flex-col items-center justify-center mt-4">
+                <div class="text-5xl mb-4">✅</div>
+                <h3 class="text-xl font-bold text-white mb-2">Thank you!</h3>
+                <p class="text-gray-400 text-center text-sm mb-6">Your feedback has been sent successfully.</p>
+                <button onclick="overlayManager.close()"
+                    class="w-full bg-gray-700 hover:bg-gray-600 text-white font-bold py-3 rounded-lg transition">
+                    Close
+                </button>
+            </div>
+
+        </div>
+    </div>
 
     <!-- Detail View Modal (For a specific score) -->
     <div id="detail-modal" class="hidden absolute inset-0 z-[60] flex items-center justify-center bg-black/90 p-4">
