feat: Add `safe-pb-4` utility class and apply it to the drawer footer for increased bottom padding.

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         </div>
 
         <!-- Drawer Footer -->
-        <div class="p-4 border-t border-white/5 text-center text-xs text-gray-600 safe-pb">
+        <div class="p-4 border-t border-white/5 text-center text-xs text-gray-600 safe-pb-4">
             v0.2.0 • Cube App
         </div>
     </div>
