refactor: Rename application from Cube App to Cube Vault and update all related assets and configurations.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Cube App</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <title>Cube Vault</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <script src="js/lib/tailwindcss.js"></script>
     <link rel="stylesheet" href="assets/styles/main.css">
     <!-- Google Analytics and Tag Manager will be loaded by js/services/analytics.js -->
@@ -243,7 +243,7 @@
 
         <!-- Drawer Footer -->
         <div class="p-4 border-t border-white/5 text-center text-xs text-gray-600 safe-pb-4">
-            v0.2.0 • Cube App
+            v0.2.0 • Cube Vault
         </div>
     </div>
 
@@ -481,9 +481,10 @@
 
             <div class="mb-6">
                 <div class="w-16 h-16 bg-transparent rounded-2xl mx-auto flex items-center justify-center mb-4">
-                    <img src="assets/icon.png" alt="Cube App Icon" class="w-full h-full object-contain drop-shadow-lg">
+                    <img src="assets/logo.svg" alt="Cube Vault Icon"
+                        class="w-full h-full object-contain drop-shadow-lg">
                 </div>
-                <h2 class="text-2xl font-bold text-white mb-1">Cube App</h2>
+                <h2 class="text-2xl font-bold text-white mb-1">Cube Vault</h2>
                 <p class="text-xs text-gray-500 uppercase tracking-widest font-bold">v0.2.0</p>
             </div>
 
@@ -535,6 +536,7 @@
   "appId": "1:1026414975386:web:647d4086d2dd512ae20223"
 }`, null, "cube-app");
     </script>
+
 
     <script type="module" src="js/app.js"></script>
 </body>
