--- a/index.html
+++ b/index.html
@@ -480,7 +480,8 @@
             </button>
 
             <div class="mb-6">
-                <div class="w-16 h-16 bg-transparent rounded-2xl mx-auto flex items-center justify-center mb-4">
+                <div
+                    class="w-16 h-16 bg-transparent rounded-2xl overflow-hidden mx-auto flex items-center justify-center mb-4">
                     <img src="assets/logo.svg" alt="Cube Vault Icon"
                         class="w-full h-full object-contain drop-shadow-lg">
                 </div>
