--- a/index.html
+++ b/index.html
@@ -159,6 +159,21 @@
                                 id="drawer-mirror-toggle-dot"></div>
                         </div>
                     </button>
+
+                    <!-- Restore Purchases Button -->
+                    <button id="btn-drawer-restore"
+                        class="w-full flex items-center justify-between p-3 rounded-xl bg-gray-800/50 hover:bg-gray-800 border border-white/5 transition group">
+                        <div class="flex items-center gap-3">
+                            <span
+                                class="p-2 rounded-lg bg-gray-700/50 group-hover:bg-gray-700 text-yellow-500 transition">🔄</span>
+                            <span class="font-medium text-gray-200">Restore Purchases</span>
+                        </div>
+                        <svg class="w-5 h-5 text-gray-500 group-hover:text-white transition" fill="none"
+                            stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7">
+                            </path>
+                        </svg>
+                    </button>
                 </div>
             </div>
 
